--- a/app/views/quizzes/index.html.erb
+++ b/app/views/quizzes/index.html.erb
@@ -2,15 +2,25 @@
 
 <% content_for :title, "Quizzes" %>
 
-<h1>Quizzes</h1>
+<div class="flex flex-col items-center w-full">
+  <h1 class="text-4xl font-extrabold text-center text-blue-700 mb-8 mt-6 tracking-tight drop-shadow-lg">
+    Quizzes
+  </h1>
 
-<div id="quizzes">
-  <% @quizzes.each do |quiz| %>
-    <%= render quiz %>
-    <p>
-      <%= link_to "Show this quiz", quiz %>
-    </p>
-  <% end %>
+  <table id="quizzes" class="mb-4">
+    <thead>
+      <tr>
+        <th>Id</th>
+        <th>Title</th>
+        <th>Actions</th>
+      </tr>
+    </thead>
+    <tbody>
+      <% @quizzes.each do |quiz| %>
+        <%= render 'quiz_row', quiz: quiz %>
+      <% end %>
+    </tbody>
+  </table>
+
+  <%= link_to "New quiz", new_quiz_path, class: "mt-2 text-white bg-blue-600 px-4 py-2 rounded" %>
 </div>
-
-<%= link_to "New quiz", new_quiz_path %>
