--- a/app/views/quizzes/new.html.erb
+++ b/app/views/quizzes/new.html.erb
@@ -1,11 +1,13 @@
 <% content_for :title, "New quiz" %>
 
-<h1>New quiz</h1>
+<div class="flex flex-col items-center w-full">
+  <h1 class="text-3xl font-bold text-blue-700 mb-8 text-center">New quiz</h1>
 
-<%= render "form", quiz: @quiz %>
+  <div class="w-full max-w-xl">
+    <%= render "form", quiz: @quiz %>
+  </div>
 
-<br>
-
-<div>
-  <%= link_to "Back to quizzes", quizzes_path %>
+  <div class="mt-8">
+    <%= link_to "Back to quizzes", quizzes_path, class: "text-white bg-green-600 px-4 py-2 rounded" %>
+  </div>
 </div>
