--- a/app/views/layouts/application.html.erb
+++ b/app/views/layouts/application.html.erb
@@ -24,7 +24,7 @@
     <%= javascript_importmap_tags %>
   </head>
 
-  <body class="bg-red-400">
+  <body class="bg-teal-300">
     <p class="notice"><%= notice %></p>
     <p class="alert"><%= alert %></p>
     <main class="flex items-center justify-center">
