--- a/app/views/devise/registrations/new.html.erb
+++ b/app/views/devise/registrations/new.html.erb
@@ -1,4 +1,4 @@
-<div class="flex flex-col items-center w-full min-h-screen bg-gray-100">
+<div class="flex flex-col items-center w-full min-h-screen">
   <h1 class="text-3xl font-bold text-blue-700 mb-8 mt-12 text-center">Sign up</h1>
 
   <div class="w-full max-w-md bg-white shadow-md rounded-lg p-8">
