--- a/app/views/quizzes/index.html.erb
+++ b/app/views/quizzes/index.html.erb
@@ -12,6 +12,7 @@
       <tr>
         <th>Id</th>
         <th>Title</th>
+        <th>Description</th>
         <th>Actions</th>
       </tr>
     </thead>
