--- a/app/views/layouts/application.html.erb
+++ b/app/views/layouts/application.html.erb
@@ -36,5 +36,8 @@
     <% if user_signed_in? %>
       <%= button_to "Sign out", destroy_user_session_path, method: :delete, class: "text-white bg-red-600 px-4 py-2 rounded" %>
     <% end %>
+    <% if user_signed_in? %>
+  <%= link_to "My Profile", user_path(current_user), class: "btn btn-primary" %>
+<% end %>
   </body>
 </html>
